<resources>
    <string name="app_name">Paint</string>
    <string name="action_settings">Settings</string>
    <string name="alpha">Alpha</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="zmie_kolor">Zmień kolor</string>
    <string name="zmien_kolor_tla">Zmien kolor tla</string>
    <string name="width_line">Width line</string>
    <string name="zmiana_grubosci">Zmiana grubosci</string>
    <string name="grubo_lini">Grubość lini</string>
    <string name="zapisz">Zapisz</string>
    <string name="name_file">Nazwa:</string>
    <string name="linie_drawing">Linie</string>
    <string name="kola_drawing">Koła</string>
    <string name="rodzaj_rysunku">Rodzaj rysunku</string>
    <string name="rec">Kradrat</string>
    <string name="dodaj_tlo">Dodaj_tło</string>
    <string name="dodaj_tekst">Dodaj tekst</string>
    <string name="podaj_tekst">Podaj tekst</string>
    <string name="size_txt">Podaj rozmiar tekstu</string>
    <string name="kwadrat_plus">Kwadrat +</string>
    <string name="kolo_plus">Koło +</string>
    <string name="sharp">Ząbki</string>
</resources>
