<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/color_menu"
        android:title="@string/zmie_kolor"
        android:icon="@drawable/ic_color_lens_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/color_back_menu"
        android:title="@string/zmien_kolor_tla"
        android:icon="@drawable/ic_format_color_fill_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/width_menu"
        android:title="@string/zmiana_grubosci"
        android:icon="@drawable/ic_network_cell_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/figures_menu"
        android:title="@string/rodzaj_rysunku"
        android:icon="@drawable/ic_extension_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/save_menu"
        android:title="@string/zapisz"
        android:icon="@drawable/ic_save_black_24dp"
        app:showAsAction="ifRoom" />

</menu>