<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/figuresFragment"
    android:layout_column="1"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin">

    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/figure_grup">
        <RadioButton
            android:text="@string/linie_drawing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linieRadioButton"
            android:layout_row="0"
            android:layout_column="0"
            android:checked="true"/>

        <RadioButton
            android:text="@string/kola_drawing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ringRadioButton"
            android:layout_row="1"
            android:layout_column="0"/>

        <RadioButton
            android:text="@string/rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recRadioButton"
            android:layout_row="2"
            android:layout_column="0"/>



    </RadioGroup>

</GridLayout>