<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_column="2"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:id="@+id/colorBackFragment">

    <TextView
        android:text="@string/alpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alphaBackTextView"
        android:layout_column="0"
        android:layout_row="0"
        />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alphaBackSeekBar"
        android:layout_column="1"
        android:layout_row="0"
        android:max="255"
        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:text="@string/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/redBackTextView"
        android:layout_column="0"
        android:layout_row="1"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/redBackSeekBar"
        android:layout_column="1"
        android:layout_row="1"
        android:max="255"
        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:text="@string/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/greenBackTextView"
        android:layout_column="0"
        android:layout_row="2"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/greenBackSeekBar"
        android:layout_column="1"
        android:layout_row="2"
        android:max="255"
        android:layout_gravity="fill_horizontal"
        />

    <TextView
        android:text="@string/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/blueBackTextView"
        android:layout_column="0"
        android:layout_row="3"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/blueBackSeekBar"
        android:layout_column="1"
        android:layout_row="3"
        android:max="255"
        android:layout_gravity="fill_horizontal"/>

    <View
        android:id="@+id/colorBackView"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_height="80dp"
        android:layout_marginTop="20dp" />


</GridLayout>